[FIX] : Overflow

--- a/styles/pages/Home.module.css
+++ b/styles/pages/Home.module.css
@@ -21,8 +21,11 @@
 .personVector {
 	height: 100%;
 }
+.pictureContainer {
+	width: 55%;
+}
 .personVector {
-	width: 110%;
+	width: 120%;
 	object-fit: contain;
 }
 
